--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -11,9 +11,9 @@ sonar.projectVersion=1.0
 # Since SonarQube 4.2, this property is optional if sonar.modules is set.
 # If not set, SonarQube starts looking for source code from the directory containing
 # the sonar-project.properties file.
-sonar.sources=./source
+#sonar.sources=./source
 sonar.coverageReportPaths=./coverage.xml
-sonar.tests=./test
+#sonar.tests=./test
 sonar.testExecutionReportPaths=./test_results.xml
 #sonar.links.issue=https://github.com/utPLSQL/utPLSQL-demo-project/issues
 #sonar.links.ci=https://travis-ci.org/utPLSQL/utPLSQL-demo-project
